# learn-wgpu-followalong

./: Cargo.toml  flake.nix
.direnv/: flake-profile-6547e27f25ad62cd5b2a9b73736e475bcfaed77a  flake-profile-6547e27f25ad62cd5b2a9b73736e475bcfaed77a.rc  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6jfg62353yy74bxp4nv65yldvv5bpnz3-source  sxl3iikxn728n4jw32fy93sifk58yxgw-source  vybd4l8c9rygmg0sxx9hf67pld54pmvn-source
.helix/: languages.toml
src/: camera_controller.rs  depth_pass.rs  depth_shader.wgsl  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  surface.rs  texture.rs  tutorial1_surface.rs  tutorial1_window.rs  window.rs
temp/: flake.nix
temp/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
temp/.direnv/flake-inputs/: 08z6pvq8m1p86ygnvrzvm64q28nssinr-source  b0k696q9jbbk0jhmxv688hcvxkqdgjjs-source
